	* nsd/fastpath.c:
	* nsd/init.c:         Status before those changes is tagged as
	* nsd/log.c:          "before-tclvfs" in order to simplify backoff
	* nsd/modload.c:      if needed.
	* nsd/nsconf.c:
	* nsd/nsmain.c:
	* nsd/pidfile.c:
	* nsd/rollfile.c:
	* nsd/tclcmds.c:
	* nsd/tclfile.c:
	* nsd/tclimg.c:
	* nsd/urlopen.c:
	* tcl/compat.tcl:
	* tests/http_byteranges.test:

2005-10-05  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nslog/nslog.c: untabified, reformatted, improved comments.
	LogObjCmd: rewritten with Tcl_Obj interface and using TclVFS
	wrappers for handling files. Proper locking when accessing the 
	Log structure elements in the LogObjCmd. 

	* nsd/dns.c: fixed typo in GetAddr when using the gethostbyname
	path. This is very needed for Apple Mac OSX since the other
	getnameinfo/getaddrinfo calls does not seem to work correctly
	and are also mt-unsafe, so it is a loose-loose situation.

2005-10-02  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/log.c:
	* nsd/nsd.h: Remove NsParam* wrapper macros. Directly using
	Ns_Config* is clearer (and grep-able).
	* nsd/server.c:
	* nsd/nsconf.c:
	* nsd/queue.c: Use new Ns_Config* routines which handle defaults
	and range checking.  Note: config file values which are less than
	the lower bound of a range are rounded up and not converted to the
	default value, as before.
	* nsd/driver.c: Some config defaults have changed.
	* nsd/nsconf.h: Removed.  Incroporated default values directly
	into code.

	* nsd/adpeval.c:
	* nsd/adprequest.c:
	* nsd/connio.c:
	* nsd/encoding.c:
	* nsd/fastpath.c:
	* nsd/form.c:
	* nsd/mimetypes.c:
	* nsd/op.c:
	* nsd/request.c:
	* nsd/return.c:
	* nsd/rollfile.c:
	* nsd/str.c:
	* nsd/tclrequest.c:
	* nsd/unix.c:
	* nsd/nswin32.c:
	* nsd/url.c:
	* nsd/urlspace.c:
	* nsd/nsd.h:
	* include/ns.h: Untabify, reformat, add CONST declarations and
	GNUC attributes.

2005-10-01  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/adprequest.c:
	* nsd/op.c:
	* nsd/return.c: